--- a/src/main/resources/static/css/the-big-picture.css
+++ b/src/main/resources/static/css/the-big-picture.css
@@ -1,12 +1,22 @@
-/*!
- * Start Bootstrap - The Big Picture (https://startbootstrap.com/templates/the-big-picture)
- * Copyright 2013-2020 Start Bootstrap
- * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-the-big-picture/blob/master/LICENSE)
- */
+p {
+  font-size: 18px;
+  color: whitesmoke;
+  text-shadow: 5px 5px 5px black;
+}
+
+h1 {
+  color: whitesmoke;
+  text-shadow: 5px 5px 5px black;
+}
+
 body {
   background: url('gym-photo.jpeg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+}
+
+.login-form {
+
 }
