Small adminPanel Changes

--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org">
 
 <head>
 
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">LOGOUT</a>
+                    <a class="nav-link" style="color: darkred;" href="logout">LOGOUT</a>
                 </li>
             </ul>
         </div>
@@ -63,20 +63,3 @@
 </body>
 
 </html>
-
-<!--<div class="login-page">-->
-<!--    <div class="form">-->
-<!--        <form class="login-form">-->
-<!--            <input type="text" placeholder="username"/>-->
-<!--            <input type="password" placeholder="password"/>-->
-<!--            <button>login</button>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</div>-->
-
-
-<!--<script>-->
-<!--    $('.message a').click(function(){-->
-<!--        $('form').animate({height: "toggle", opacity: "toggle"}, "slow");-->
-<!--    });-->
-<!--</script>-->
