--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -50,9 +50,15 @@
 
 <!-- Page Content -->
 <section>
-    <div class="container">
+    <form action="" method="post">
+<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
+        <div class="container p-5 align-content-center">
+            <p>Information id:<input type="text" th:field="${information.id}"></p>
+            <br><textarea th:field="${information.info}"></textarea>
 
-    </div>
+            <br><button class="btn btn-primary" type="submit">Submit Changes</button>
+        </div>
+    </form>
 </section>
 
 <!-- Bootstrap core JavaScript -->
