--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -50,10 +50,10 @@
 
 <!-- Page Content -->
 <section>
-    <form action="" method="post">
+    <form action="" method="post" >
 <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-        <div class="container p-5 align-content-center">
-            <p>Information id:<input type="text" th:field="${information.id}"></p>
+        <div class="container p-5" style="float: right">
+            <p>Information id:<input type="text" size="6" th:field="${information.id}"></p>
             <br><textarea th:field="${information.info}"></textarea>
 
             <br><button class="btn btn-primary" type="submit">Submit Changes</button>
