--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: darkred;" href="logout">LOGOUT</a>
+                    <a class="btn btn-danger" href="logout">LOGOUT</a>
                 </li>
             </ul>
         </div>
