--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -52,10 +52,9 @@
         <div class="row">
             <div class="col-lg-6">
                 <h1 class="mt-5">The Big Picture</h1>
-<!--                <p th:text="${information.info}"></p>-->
                 <table>
                 <tr th:each="information:${infos}">
-                    <td th:text="${information.info}"></td>
+                    <td class="" th:text="${information.info}"></td>
                 </tr>
                 </table>
             </div>
