--- a/src/main/resources/static/css/the-big-picture.css
+++ b/src/main/resources/static/css/the-big-picture.css
@@ -1,7 +1,9 @@
-p, td{
+p, td, .my-text{
   font-size: 18px;
   color: whitesmoke;
-  text-shadow: 5px 5px 5px black;
+  text-shadow: 2px 5px 5px black;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.2); /* Black w/opacity/see-through */
 }
 
 h1 {
