--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
 
   <!-- Page Content -->
   <section>
-    <div class="container">
+    <div class="container" style="padding-top: 125px">
       <div class="row">
         <div class="col-lg-6">
           <h1 class="mt-5">The Big Picture</h1>
