--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -52,8 +52,10 @@
 <section>
     <form action="" method="post" >
         <div class="container p-5 " style="float: right">
-<!--            <p>Information id:<input type="text" size="6" th:field="${information.name}"></p>-->
-            <p>Page name:</p>
+            <div>
+            <button class="btn btn-secondary" id="btn" onclick="return showTextArea()">Content</button>
+            </div>
+            <div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" th:field="${information.id}" id="option1" value="1">
                 <label class="form-check-label my-text" for="option1">Home</label>
@@ -66,11 +68,36 @@
                 <input class="form-check-input" type="radio" th:field="${information.id}" id="option3" value="3">
                 <label class="form-check-label my-text" for="option3">Contact</label>
             </div>
-            <br><br><textarea th:field="${information.info}"></textarea>
+            <br><br>
+                <div id="infoID" ><textarea th:field="${information.info}"></textarea></div>
+                <div id="nameID" style="display: none" ><textarea th:field="${information.name}"></textarea></div>
+<!--                th:each="information:${infos}"-->
+
             <br><br><button class="btn btn-primary" type="submit">Submit Changes</button>
-        </div>
+            </div>
+            </div>
+
     </form>
 </section>
+
+<script>
+    function showTextArea() {
+        var x = document.getElementById("infoID");
+        var y = document.getElementById("nameID");
+        var btn = document.getElementById("btn");
+
+        if (x.style.display == "none") {
+            x.style.display = "block";
+            y.style.display = "none";
+            btn.innerHTML = "Content";
+        } else {
+            x.style.display = "none";
+            y.style.display = "block";
+            btn.innerHTML = "Tittle";
+        }
+        return false;
+    }
+</script>
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
