--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -46,20 +46,30 @@
 </nav>
 
 <!-- Page Content -->
-<section>
-    <div class="container" style="padding-top: 125px">
-        <div class="row">
+<section class="flex-row">
+    <div class="container" style="padding-top: 200px; display:flex; flex-flow:row; margin-right: 150px">
+        <div class="container">
             <div class="col-lg-6">
-                <h1 class="mt-5">The Big Picture</h1>
                 <table>
+                    <tr th:each="information:${infos}">
+                        <h1 class="mt-5" th:text="${information.name}"></h1>
+                    </tr>
                     <tr th:each="information:${infos}">
                         <td class="" th:text="${information.info}"></td>
                     </tr>
                 </table>
             </div>
         </div>
+        <div class="" style="overflow:hidden;max-width:100%;width:1000px;height:300px;">
+            <div id="googlemaps-display" style="height:100%; width:100%;max-width:100%;">
+                <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=gym&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+            </div>
+            <a class="googlemaps-html" href="https://www.embed-map.com" id="grabmap-authorization">https://www.embed-map.com</a>
+            <style>#googlemaps-display img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style>
+        </div>
     </div>
 </section>
+
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
